# astro-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SDKrefactor.md  SECURITY.md  commends.md  exhaustive_discovery.py  mkdocs.yml  prompt.md  prompt2.md  pyproject.toml  pyswisseph_full_inventory.json  sdk-features.md  sdkplan.md  v2.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.md
docs/features/: event-rules.md  kp-houses.md
docs/getting-started/: quick-start.md
docs/migration/: v1.2-to-v1.3.md
docs/research/: harmonics.md  midpoints.md
examples/: 01_natal_chart.py  02_advanced_features.py  02_aspects.py  03_eclipses.py  03_facade_api.py  README.md
src/astrosdk/: __init__.py  sdk.py
src/astrosdk/application/: aspect_service.py  natal_service.py
src/astrosdk/config/: astro_config.py  default_rules.py
src/astrosdk/core/: __init__.py  constants.py  constants.py.bak  ephemeris.py  ephemeris_context.py  errors.py  exceptions.py  time.py
src/astrosdk/domain/: __init__.py  acceleration.py  aspect.py  astrocartography.py  chart.py  combustion.py  cycle.py  declination.py  dignity.py  ephemeris_export.py  event.py  event_rules.py  harmonics.py  house.py  intensity.py  kp_houses.py  midpoints.py  planet.py  primary_directions.py  synodic.py
src/astrosdk/domain/logic/: acceleration.py  combustion.py  dignity.py
src/astrosdk/domain/models/: aspect.py  chart.py  house.py  planet.py
src/astrosdk/engine/: __init__.py  chart_engine.py  cycle_engine.py  event_engine.py  metadata.py
src/astrosdk/infrastructure/swisseph/: __init__.py  adapters.py  engine.py
src/astrosdk/ports/: ephemeris.py  events.py  houses.py
src/astrosdk/services/: __init__.py  aspect_service.py  crossing_service.py  cycle_service.py  event_service.py  financial_time_service.py  fixed_star_service.py  heliacal_service.py  horizon_service.py  natal_service.py  node_service.py  paran_service.py  planetary_service.py  transit_service.py
tests/: test_acceleration.py  test_advanced_features.py  test_aspects_ayanamsas.py  test_combustion_dignity.py  test_core.py  test_crossings.py  test_domain.py  test_edge_cases.py  test_event_rules.py  test_heliacal.py  test_heliocentric.py  test_horizon.py  test_kp_houses.py  test_nodes.py  test_parans.py  test_research_tools.py  verify_v2.py
tests/regression/: test_astronomy_events.py  test_enterprise_determinism.py  test_expanded_astronomy.py
